# actividad_29_10_2025

api-inventario/: .coverage  Makefile  README.md  locustfile.py  pyproject.toml  requirements.txt
api-inventario/docs/: arquitectura.md
api-inventario/features/: inventario.feature
api-inventario/features/steps/: inventario_steps.py
api-inventario/instance/: inventario.db
api-inventario/src/instance/: inventario.db
api-inventario/src/inventario/: app.py
api-inventario/tests/: test_app.py
